--- a/chat.html
+++ b/chat.html
@@ -49,8 +49,10 @@
     </aside>
 
   </div>
-
-</body><script>
+<script src="/socket.io/socket.io.js"></script>
+<script src="chat.js"></script>
+</body>
+<script>
   const input = document.getElementById("chatInput");
   const send = document.getElementById("sendBtn");
 
