--- a/chat.html
+++ b/chat.html
@@ -49,8 +49,12 @@
     </aside>
 
   </div>
+  <!-- Socket.IO Client wird vom Server ausgeliefert -->
 <script src="/socket.io/socket.io.js"></script>
-<script src="chat.js"></script>
+<!-- Dein Client-Code -->
+<script src="/client.js"></script>
+</body>
+</html>
 </body>
 <script>
   const input = document.getElementById("chatInput");
