--- a/login.html
+++ b/login.html
@@ -64,47 +64,56 @@
   const rules = form.querySelector("input[name='rules']");
 
   form.addEventListener("submit", function (e) {
-    let errors = [];
+  let errors = [];
 
-    // Benutzername prüfen
-    const nameValue = username.value.trim();
+  // Benutzername prüfen
+  const nameValue = username.value.trim();
 
-    if (!nameValue) {
-      errors.push("Bitte wähle einen Benutzernamen.");
-    } else {
-      const hasSpecialChars = /[^a-zA-Z0-9]/.test(nameValue);
-      const letters = nameValue.replace(/[0-9]/g, "");
-      const numbers = nameValue.replace(/[^0-9]/g, "");
+  if (!nameValue) {
+    errors.push("Bitte wähle einen Benutzernamen.");
+  } else {
+    const hasSpecialChars = /[^a-zA-Z0-9]/.test(nameValue);
+    const letters = nameValue.replace(/[0-9]/g, "");
+    const numbers = nameValue.replace(/[^0-9]/g, "");
 
-      if (letters.length < 3) {
-        errors.push("Der Benutzername muss mindestens 3 Buchstaben enthalten.");
-      }
-      if (hasSpecialChars) {
-        errors.push("Der Benutzername darf keine Sonderzeichen enthalten.");
-      }
-      if (numbers.length > 4) {
-        errors.push("Der Benutzername darf maximal 4 Zahlen enthalten.");
-      }
+    if (letters.length < 3) {
+      errors.push("Der Benutzername muss mindestens 3 Buchstaben enthalten.");
     }
-
-    // Geschlecht prüfen
-    if (!gender.value) {
-      errors.push("Bitte wähle ein Geschlecht.");
+    if (hasSpecialChars) {
+      errors.push("Der Benutzername darf keine Sonderzeichen enthalten.");
     }
-
-    // Regeln prüfen
-    if (!rules.checked) {
-      errors.push("Bitte bestätige die Regeln von Forge-Nox.");
+    if (numbers.length > 4) {
+      errors.push("Der Benutzername darf maximal 4 Zahlen enthalten.");
     }
+  }
 
-    if (errors.length > 0) {
-      e.preventDefault();
-      showErrors(errors);
-    } else {
-      clearErrors();
-      // hier später echtes Login / Redirect
-    }
-  });
+  // Geschlecht prüfen
+  if (!gender.value) {
+    errors.push("Bitte wähle ein Geschlecht.");
+  }
+
+  // Regeln prüfen
+  if (!rules.checked) {
+    errors.push("Bitte bestätige die Regeln von Forge-Nox.");
+  }
+
+  if (errors.length > 0) {
+    e.preventDefault();
+    showErrors(errors);
+  } else {
+    // WICHTIG: Formular nicht abschicken, sondern clientseitig weiterleiten
+    e.preventDefault();
+    clearErrors();
+
+    // Optional: Username & Gender an chat.html übergeben
+    const params = new URLSearchParams({
+      username: nameValue,
+      gender: gender.value
+    });
+
+    window.location.href = "chat.html?" + params.toString();
+  }
+});
 
   function showErrors(list) {
     const box = document.querySelector(".fn-error-box");
