--- a/chat.html
+++ b/chat.html
@@ -5,6 +5,7 @@
   <title>Forge-Nox | Livechat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="forge-nox-chat.css" />
+  <link rel="stylesheet" href="system-messages.css" />
 </head>
 <body class="fn-body">
 
@@ -44,5 +45,6 @@
   <script src="/socket.io/socket.io.js"></script>
   <!-- Dein Client-Code -->
   <script src="/client.js"></script>
+  <script src="system-messages.js"></script>
 </body>
 </html>
