--- a/chat.html
+++ b/chat.html
@@ -23,7 +23,7 @@
       </div>
 
       <footer class="fn-chat-input">
-        <input type="text" id="userSearch" placeholder="User suchen." />
+        <input type="text" id="userSearch" placeholder="Nachricht senden." />
         <button id="sendBtn">Senden</button>
       </footer>
     </section>
