--- a/chat.html
+++ b/chat.html
@@ -23,18 +23,18 @@
       </div>
 
       <footer class="fn-chat-input">
-        <input type="text" id="userSearch" placeholder="Nachricht senden." />
-        <button id="sendBtn">Senden</button>
-      </footer>
+  <input type="text" id="chatInput" placeholder="Nachricht senden." />
+  <button id="sendBtn">Senden</button>
+</footer>
     </section>
 
     <!-- USERLISTE -->
     <aside class="fn-userlist">
-      <div class="fn-userlist-search">
-        <input type="text" placeholder="User suchen." disabled />
-      </div>
+  <div class="fn-userlist-search">
+    <input type="text" id="userSearch" placeholder="User suchen." />
+  </div>
 
-      <ul class="fn-userlist-list" id="userList">
+  <ul class="fn-userlist-list" id="userList">
         <!-- Dynamisch gefüllt via JS -->
       </ul>
     </aside>
