--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 
   <main class="fn-container">
     <section class="fn-card">
-      <h1 class="fn-logo">Forge<span>Nox</span></h1>
+      <h1 class="fn-logo">Forge<span> Nox</span></h1>
       <p class="fn-subtitle">Betritt die Schmiede.</p>
 
       <!-- WICHTIGE ÄNDERUNG HIER -->
@@ -28,7 +28,7 @@
         </label>
 
         <label class="fn-label fn-password-row" style="display: none;">
-  Passwort (falls Name registriert)
+  Passwort
   <input
     type="password"
     name="password"
@@ -52,7 +52,7 @@
           <input type="checkbox" name="rules" required />
           <span>
             Ich habe die
-            <a href="#" target="_blank">Regeln von Forge-Nox</a>
+            <a href="#" target="_blank">Regeln von Forge Nox</a>
             gelesen und akzeptiere sie.
           </span>
         </label>
@@ -63,10 +63,6 @@
 
         <ul class="fn-error-box"></ul>
       </form>
-
-      <p class="fn-footer-hint">
-        Kein Konto? Registrierung folgt später.
-      </p>
     </section>
   </main>
 
