--- a/chat.html
+++ b/chat.html
@@ -43,15 +43,9 @@
         <input type="text" id="userSearch" placeholder="User suchen." />
       </div>
 
-      <!-- RAUMLISTE -->
       <ul class="fn-roomlist" id="roomList">
-        <!-- Räume werden hier dynamisch eingefügt -->
-      </ul>
-
-      <!-- USERLISTE -->
-      <ul class="fn-userlist-list" id="userList">
-        <!-- User werden hier dynamisch eingefügt -->
-      </ul>
+  <!-- Räume + ihre User werden dynamisch gerendert -->
+</ul>
 
     </aside>
 
