--- a/chat.html
+++ b/chat.html
@@ -101,7 +101,7 @@
   <script src="/socket.io/socket.io.js"></script>
   <script src="/client.js"></script>
   <script src="system-messages.js"></script>
-  <script src="rooms-client.js"></script>
+  <!-- script src="rooms-client.js"></script -->
   <script src="profile-client.js"></script>
 </body>
 </html>
